<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_version">0.9.1</string>
    <string name="url_share_post_id">http://parkcatcher.com/spot/%1$s/%2$s/%3$s/%4$s/</string>
    <string name="fragment_tag_map">fragment_map</string>
    <string name="fragment_tag_sliding_up_calendar">fragment_sliding_up_calendar</string>
    <string name="app_name">Park Catcher Montréal</string>
    <string name="activity_map">Park Catcher</string>
    <string name="activity_details">Parking Information</string>
    <string name="activity_about">About</string>
    <string name="activity_favorites">Favorites</string>
    <string name="activity_help">Parking Rules</string>
    <string name="activity_preferences">Settings</string>
    <string name="activity_eula">EULA</string>
    <string name="navdrawer_open">Open navigation drawer</string>
    <string name="navdrawer_close">Close navigation drawer</string>
    <string name="navdrawer_item_map">Map</string>
    <string name="navdrawer_item_favorites">Favorites</string>
    <string name="navdrawer_item_help">Parking rules</string>
    <string name="navdrawer_item_about">About</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorites</string>
    <string name="btn_directions">Directions</string>
    <string name="btn_streetview">Street View</string>
    <string name="btn_share">Share</string>
    <string name="eula_title">GNU General Public License v3.0</string>
    <string name="eula_accept_btn">Accept</string>
    <string name="eula_decline_btn">Decline</string>
    <string name="search_hint">Address</string>
    <string name="dialog_title_duration">Duration</string>
    <string name="dialog_value_duration">1&#160;hour</string>
    <string name="dialog_value_duration_plural">%1$s&#160;hours</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_done">Done</string>
    <string name="toast_search_error">Location %1$s not found</string>
    <string name="toast_search_network_connection_error">Search requires an active Internet connection…</string>
    <string name="toast_network_connection_error">Internet connection is unavailable…</string>
    <string name="toast_map_not_ready">Loading Map…</string>
    <string name="toast_map_zoom_to_update">Please zoom in to update map information</string>
    <string name="toast_playservices_restart">Restarting Park Catcher… Google Play services successfully update!</string>
    <string name="toast_favorites_added">Added to favorites</string>
    <string name="toast_favorites_removed">Removed from favorites</string>
    <string name="toast_streetview_error">Unable to start Google Street View…</string>
    <string name="map_marker_snippet_title">Parking Allowed</string>
    <string name="map_marker_snippet_subtitle">Next forbidden periods:</string>
    <string name="map_no_connection">Internet connection is&#160;unavailable…</string>
    <string name="map_retry_btn">Retry</string>
    <string name="map_no_connection_restart">Restarting Park Catcher…</string>
    <string name="playservices_title">What is this about?</string>
    <string name="playservices_1">Google Play services lets Android apps from the Google Play Store integrate with Google+, Google Maps, and other Google services. To work correctly, some apps may require Google Play services to be present and up to date.</string>
    <string name="playservices_2">Google Play services is usually updated automatically on Android devices. In the event you use an app that requires the latest Google Play services, you will be redirected to install or update it manually from the Google Play Store.</string>
    <string name="drawer_time_title">%1$s at&#160;%2$s for&#160;1&#160;hour</string>
    <string name="drawer_time_title_plural">%1$s at&#160;%2$s for&#160;%3$s&#160;hours</string>
    <string name="drawer_title_day">EEEE</string>
    <string name="drawer_date_btn">EEEE, MMM&#160;d</string>
    <string name="drawer_time_btn">kk:mm</string>
    <string name="drawer_duration_btn">1&#160;hour</string>
    <string name="drawer_duration_plural_btn">%1$s&#160;hours</string>
    <string name="favorites_empty_list">Favorites list is empty. Store your favorite locations here for faster access…</string>
    <string name="details_title_allowed">Parking Allowed</string>
    <string name="details_title_forbidden">Parking Forbidden</string>
    <string name="details_progress_address">Looking for address…</string>
    <string name="details_share_title">Parking Information</string>
    <string name="details_share_subtitle">Parking Information by Park Catcher MTL\r\n%1$s\r\nParking here is forbidden at the following hours: %2$s</string>
    <string name="details_address_error">Address not found</string>
    <string name="logo_open_data" tools:ignore="ReferenceType">@drawable/logo_open_data_en</string>
    <string name="about_project_version">Version %1$s</string>
    <string name="about_project_url"><a href="http://www.parkcatcher.com/">parkcatcher.com</a></string>
    <string name="about_intro_1">Stop driving in circles, avoid parking tickets, head directly to the right street!</string>
    <string name="about_intro_2">Park Catcher Montréal is your guide to easy parking. An Open Data project.</string>
    <string name="about_credits_1">Android app developed by <a href="http://www.mudar.ca/">Mudar Noufal</a>. Source code is released under the GPLv3 license from the Free Software Foundation.</string>
    <string name="about_credits_2">Art Direction and Graphic Design by <a href="http://cargocollective.com/emmadumesnil/">Emma Dumesnil</a>.</string>
    <string name="about_credits_3">Project done in collaboration with <a href="http://montrealouvert.net/donnees-ouvertes-questions-frequemment-demandees/?lang=en">Montréal ouvert</a>. Many thanks to everyone at the The City and The Plateau borough who made this project possible.</string>
    <string name="about_open_data">This app is powered by The City of Montréal Open Data <a href="http://donnees.ville.montreal.qc.ca/fiche/stationnement-rue/">Portal</a>, in compliance with its Open Data <a href="http://donnees.ville.montreal.qc.ca/licence-texte-complet">license</a>.</string>
    <string name="help_app_1">The interactive map and the search engine allow you to find spots where parking is allowed for the time period you need.</string>
    <string name="help_app_2">Tap on a parking post, displayed in <b>green</b>, to display the next no-parking period in that area.</string>
    <string name="help_app_3">The zones where parking is <b>not allowed</b> are not displayed on the map.</string>
    <string name="help_app_4">Tap the <b>date</b> at the screen bottom to enter the time period for which you need a parking spot.</string>
    <string name="help_app_5"><b>Long press</b> on the map to change your geographic location.</string>
    <string name="help_app_6"><b>Press twice</b> on the “Map” tab title to reset the search time period and your geographic location.</string>
    <string name="help_rules">It is prohibited to park:\r\n&#8226; in front of a private driveway\r\n&#8226; in a back lane\r\n&#8226; on a cycle path\r\n&#8226; next to a parked vehicle (double parking)\r\n&#8226; facing oncoming traffic\r\n&#8226; in front of a fire hydrant\r\n&#8226; near an intersection\r\n&#8226; on the sidewalk\r\n&#8226; in a pedestrian walkway\r\n&#8226; in front of a disability access ramp\r\n&#8226; on an angle, unless signage, even owing to snowfall</string>
    <string name="help_stopping_1">No stopping any time.</string>
    <string name="help_stopping_2">No stopping during the period specified.</string>
    <string name="help_stopping_3">No stopping any time: Reserved for emergency vehicles.</string>
    <string name="help_stopping_4">No stopping any time: Reserved for buses.</string>
    <string name="help_parking_1">No parking any time.</string>
    <string name="help_parking_2">No parking during the period and season specified.</string>
    <string name="help_parking_3">No parking during the period specified: Reserved for taxis.</string>
    <string name="help_parking_6">No parking during the period specified: This temporary sign takes priority over the existing signage.</string>
    <string name="help_restricted_1">Maximum 15 minute parking: Load/Unload area.</string>
    <string name="help_restricted_2">Maximum 60 minute parking, during the period specified.</string>
    <string name="help_srrr_1">No parking during the period specified: Reserved for S3R permit holders (resident parking only).</string>
    <string name="help_srrr_2">The number of parking spaces reserved for residents in a given sector is no more than 50% of the available spaces.</string>
    <string name="help_cell_1">As of April 1, 2008, use of a hand-held cell phone that does not have a “hands-free” function is prohibited while driving.</string>
    <string name="help_cell_2">Committing this type of offence will result in:\r\n&#8226; 3 demerit points\r\n&#8226; $80 to $100 fine</string>
    <string name="help_arrow_1">If the sign carries an arrow, the regulation applies in the zone pointed by the arrow.</string>
    <string name="help_arrow_2">An arrow pointing towards the <b>road</b> indicates the beginning of the sign’s zone:</string>
    <string name="help_arrow_3">An arrow pointing towards the <b>sidewalk</b> indicates the end of the sign’s zone:</string>
    <string name="help_arrow_4">A regulation zone can <b>begin</b> after an intersection, in which case the sign doesn’t carry an arrow.</string>
    <string name="help_arrow_5">A zone <b>ends</b> at the next intersection or at a sign that carries an arrow.</string>
    <string name="help_arrow_6">A sign <b>without an arrow</b> is an intermediate sign that indicates the middle of the regulation zone.</string>
    <string name="help_arrow_7">A back lane does not interrupt the signage: if there are no other signs, the signage still applies on the other side of the lane.</string>
    <string name="help_priority_1">When a pole carries multiple signs, regulations are applied from <b>top to bottom signs</b>.</string>
    <string name="help_priority_2"><b>Case #1</b>\r\nIt’s 8:00 Monday morning, you want to park for 30&#160;minutes.\r\nHere, parking is <b>strictly forbidden</b> between 7:00 and 9:00, regardless of duration.</string>
    <string name="help_priority_3"><b>Case #2</b>\r\nSigns are in reverse order. It’s still 8:00 Monday morning, you want to park for 30&#160;minutes.\r\nHere, maximum 60 minute <b>parking is allowed</b> on weekdays.</string>
    <string name="prefs_language_title">Language</string>
    <string name="prefs_language_dialog_title">Set language</string>
    <string name="prefs_language_french">Français</string>
    <string name="prefs_language_english">English</string>
    <string name="prefs_units_title">Distance Units System</string>
    <string name="prefs_units_dialog_title">Set units system</string>
    <string name="prefs_units_iso">Metric (km)</string>
    <string name="prefs_units_imperial">Imperial (mile)</string>
    <string name="desc_logo_open_data_content">Montréal Ouvert</string>
    <string name="desc_logo_about_content">Park Catcher</string>
    <string name="desc_arrow_illustration_content">Parking signage arrows</string>
    <string name="desc_address">Address</string>
    <string name="desc_parking_time">Parking time</string>
    <string name="desc_parking_time_edit">Edit parking time</string>
    <string name="park_distance_iso">%.1f km</string>
    <string name="park_distance_iso_min">&lt; 100 m</string>
    <string name="park_distance_imp">%.1f mi</string>
    <string name="park_distance_imp_feet">%1$s ft</string>
    <string name="park_distance_imp_min">&lt; 200 ft</string>
</resources>