<?xml version="1.0" encoding="utf-8"?>
<!--
    Park Catcher Montréal
    Find a free parking in the nearest residential street when driving in
    Montréal. A Montréal Open Data project.

    Copyright (C) 2012 Mudar Noufal <mn@mudar.ca>

    This file is part of Park Catcher Montréal.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/root_help_arrow"
        style="@style/HelpBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_1" />

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_2" />

        <ImageView
            android:id="@+id/help_arrow_sw_left"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <ImageView
            android:id="@+id/help_arrow_ne_left"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <ImageView
            android:id="@+id/help_arrow_se_right"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <ImageView
            android:id="@+id/help_arrow_nw_right"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_3" />

        <ImageView
            android:id="@+id/help_arrow_ne_right"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <ImageView
            android:id="@+id/help_arrow_sw_right"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <ImageView
            android:id="@+id/help_arrow_nw_left"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <ImageView
            android:id="@+id/help_arrow_se_left"
            style="@style/HelpImageArrow"
            android:contentDescription="@string/arrow_illustration_content_desc"
            android:src="@drawable/help_arrow_empty" />

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_4" />

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_5" />

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_6" />

        <TextView
            style="@style/HelpBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/help_arrow_7" />
    </LinearLayout>

</ScrollView>