<?xml version="1.0" encoding="utf-8"?>
<!--
    Park Catcher Montréal
    Find a free parking in the nearest residential street when driving in
    Montréal. A Montréal Open Data project.

    Copyright (C) 2012 Mudar Noufal <mn@mudar.ca>

    This file is part of Park Catcher Montréal.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/help_app_intro"
            style="@style/ContentBigSubtitle" />

        <LinearLayout
            style="@style/HelpRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/HelpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_nav_map" />

            <TextView
                style="@style/HelpBoxText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_app_1" />
        </LinearLayout>


        <LinearLayout
            style="@style/HelpRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/HelpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"
                android:tint="@color/text_primary_light" />

            <TextView
                style="@style/HelpBoxText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_app_4" />
        </LinearLayout>

        <LinearLayout
            style="@style/HelpRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/HelpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place" />

            <TextView
                style="@style/HelpBoxText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_app_2" />
        </LinearLayout>

        <LinearLayout
            style="@style/HelpRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/HelpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_place"
                android:tint="@color/theme_alert_primary" />

            <TextView
                style="@style/HelpBoxText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_app_3" />
        </LinearLayout>

        <LinearLayout
            style="@style/HelpRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/HelpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_nav_info" />

            <TextView
                style="@style/HelpBoxText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_app_5" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>